# pipe_macro_rs

./: Cargo.toml  README.md
src/: lib.rs
